--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,7 +13,9 @@ catalog:
   '@commitlint/config-conventional': ^18.6.3
   '@mistjs/cli': 0.0.1-beta.9
   '@mistjs/vite-plugin-preload': ^0.0.1
+  '@types/crypto-js': ^4.2.2
   '@types/fs-extra': ^11.0.4
+  '@types/file-saver': ^2.0.7
   '@types/lodash': ^4.17.13
   '@types/lodash-es': ^4.17.12
   '@types/node': ^20.17.6
@@ -39,6 +41,7 @@ catalog:
   esno: ^0.17.0
   execa: ^8.0.1
   fs-extra: ^11.2.0
+  file-saver: ^2.0.5
   globals: ^15.13.0
   husky: ^9.1.6
   jsdom: ^22.1.0
